# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.68 2004/07/11 21:22:07 zhen Exp $

  11 Jul 2004; <zhen@gentoo.org> +catalyst, -catalyst.new.py,
  modules/catalyst_support.py:
  completely rewrote the catalyst main script so that it can actually utilize
  more than one command line flag. new functionality included, but not active
  yet (--debug and --verbose). arguments can still be passed on the commandline
  through the use of the -C (--cli) flag. updated the arg_parse function in
  catalyst_support.py to accomodate my changes.

  02 Jul 2004; John Davis <zhen@gentoo.org> modules/generic_stage_target.py,
  modules/generic_target.py, modules/grp_target.py,
  modules/livecd_stage1_target.py, modules/livecd_stage2_target.py,
  modules/snapshot_target.py, modules/stage1_target.py,
  modules/stage2_target.py, modules/stage3_target.py,
  modules/tinderbox_target.py, targets/stage1/stage1.sh:
  fixes for bugs #55192 and #54137
  added a new key for all specfiles, portage_confdir.
  this should point to a directory similar in functionality to /etc/portage.
  
  cleaned up the module code a bit so that unnecessary modules
  are not imported.
  
  more work on resuming. it is getting there, but it still needs a ton of work,
  so please test, and report bugs.

  18 Jun 2004; John Davis <zhen@gentoo.org> catalyst,
  modules/catalyst_support.py, modules/generic_stage_target.py,
  targets/stage1/build.sh, targets/stage1/stage1-chroot.sh,
  targets/stage2/stage2-chroot.sh, targets/stage3/stage3-chroot.sh:
  stage resuming functionality should be working. I still have to work on GRP
  and livecds, but they should not be hard. I could not incorporate emerge
  --resume into stage resuming functionality because in some instances, portage
  is remerged (bootstrap, stage2), which wipes out the resume data and puts