@@ -1,7 +1,7 @@
 #!/usr/bin/python
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/catalyst,v 1.42 2004/07/11 21:25:22 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/catalyst,v 1.43 2004/07/12 14:25:16 zhen Exp $
 
 # Maintained in full by John Davis <zhen@gentoo.org>
 
@@ -196,7 +196,7 @@ if __name__ == "__main__":
 			sys.exit(2)
 
 		if o in ("-d", "--debug"):
-			debug=True
+			conf_values["DEBUG"]=1
 
 		if o in ("-c", "--config"):
 			myconfig=a
@@ -211,7 +211,7 @@ if __name__ == "__main__":
 			myspecfile=a
 			
 		if o in ("-V", "--verbose"):
-			verbose=True
+			conf_values["VERBOSE"]=1
 	
 	# import configuration file and import our main module using those settings
 	parse_config(myconfig)
