@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/livecd-stage1-chroot.sh,v 1.3 2004/06/04 14:03:46 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/livecd-stage1-chroot.sh,v 1.4 2004/07/12 14:25:16 zhen Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -43,5 +43,10 @@ export CONFIG_PROTECT="-*"
 USE="build" emerge portage
 #turn off auto-use:
 export USE_ORDER="env:conf:defaults"	
+
+if [ "${clst_DEBUG}" ]
+then
+	emerge ${clst_emergeopts} -vp ${clst_packages}
+fi
 
 emerge ${clst_emergeopts} ${clst_packages}
