@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/tinderbox/tinderbox-chroot.sh,v 1.3 2004/06/04 14:03:46 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/tinderbox/tinderbox-chroot.sh,v 1.4 2004/07/12 14:25:16 zhen Exp $
 
 /usr/sbin/env-update
 source /etc/profile
@@ -41,7 +41,13 @@ rsync -avx --exclude "/root/" --exclude "/tmp/" --exclude "/usr/portage/" / /tmp
 
 for x in ${clst_tinderbox_packages}
 do
+	if [ -n "${clst_DEBUG}" ]
+	then
+		emerge --usepkg --buildpkg -vp $x
+	fi
+	
 	emerge --usepkg --buildpkg $x
+	
 	if [ "$?" != "0" ]
 	then
 		echo "! $x" >> /tmp/tinderbox.log	
